# BioShield

./: .gitignore  BioShield_Versions_Report.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  QUICK_GUIDE.md  README.md  README.md.backup  README_v2.md  Wiki.md  build-and-push.sh  config.json  index.html  index222.html  pyproject.toml  requirements.txt  run.sh  run_bioshield.sh  run_intensive_adjust.py  setup.py  values.yaml
.github/workflows/: pages.yml  publish.yml  quick-publish.yml
bioshield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bioshield_pkg/: setup.py
bioshield_pkg/bioshield/: __init__.py  main.py
bioshield_pkg/bioshield.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bioshield_pkg/bioshield/bioshield.egg-info/: PKG-INFO
bioshield_pkg/bioshield/bioshield_agro_immunity.egg-info/: SOURCES.txt  requires.txt
bioshield_pkg/bioshield/modules/: auto_adjuster.py  genomic_integrity.py  report_formatter.py
config/: auto_adjust.json  indicators.json  settings.yaml
data/processed/: actions_taken.json  dashboard.json  nutrients_data.json  predictions.json  soil_data.json  system_stats.json  water_data.json
docs/: 404.html  Gemfile  _config.yml  api.md  getting-started.md  index.md  modules.md  project_structure.md
docs/_layouts/: default.html
docs/api/: index.md
docs/apk/: BioShield.aab  BioShield.apk  assetlinks.json  signing-key-info.txt  signing.keystore
docs/assets/css/: custom.scss  style.scss
docs/assets/js/: custom.js
docs/getting-started/: index.md
docs/image/: _config.yml
docs/modules/: index.md
helm/bioshield/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  job.yaml  service.yaml
reports/daily/: report_2026-01-12.txt  report_2026-01-13.txt  report_2026-01-14.txt
src/: run_auto_adjust.py
src/bioshield.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
src/bioshield_agro_immunity.egg-info/: PKG-INFO  entry_points.txt
src/bioshield_termux.egg-info/: PKG-INFO  SOURCES.txt
src/modules/: agricultural_advisor.py  agricultural_advisor_backup.py  ai_predictor.py  config_manager.py  nutrient_monitor.py  report_generator.py  soil_monitor.py
src/network/: network_analyzer.py
src/reports/daily/: report_2026-01-14.txt
