[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioshield"
version = "3.3.5"
description = "BioShield-B: Agro-Systemic Immunity & Genetic Intelligence Framework for Sustainable Agriculture"
readme = "README.md"
authors = [
    {name = "Samir Baladi", email = "emerladcompass@gmail.com"}
]
maintainers = [
    {name = "Samir Baladi", email = "emerladcompass@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Agriculture",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Environmental Science",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Agricultural Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "Framework :: Jupyter",
    "Framework :: IPython",
    "Environment :: Console",
    "Environment :: Web Environment"
]
keywords = [
    "agriculture", "soil-monitoring", "ai", "machine-learning",
    "environmental-science", "precision-farming", "sustainability",
    "agro-technology", "soil-health", "climate-smart-agriculture",
    "artificial-intelligence", "iot", "smart-farming", "agroecology",
    "python", "data-science", "predictive-analytics", "automation"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "requests>=2.26.0",
    "python-dotenv>=0.19.0",
    "tabulate>=0.8.9",
    "colorama>=0.4.4",
    "tqdm>=4.62.0",
    "Pillow>=9.0.0",
    "Jinja2>=3.0.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "isort>=5.10.0",
    "pre-commit>=2.17.0"
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc2>=0.2.0"
]
dashboard = [
    "streamlit>=1.0.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0"
]
full = [
    "bioshield[dev]",
    "bioshield[docs]",
    "bioshield[dashboard]"
]

[project.urls]
Homepage = "https://github.com/emerladcompass/BioShield"
Documentation = "https://emerladcompass.github.io/BioShield/"
Repository = "https://github.com/emerladcompass/BioShield.git"
Changelog = "https://github.com/emerladcompass/BioShield/releases"
Issues = "https://github.com/emerladcompass/BioShield/issues"
Discussions = "https://github.com/emerladcompass/BioShield/discussions"
Sponsor = "https://github.com/sponsors/emerladcompass"
Donate = "https://emerladcompass.github.io/donate"
Twitter = "https://twitter.com/emerladcompass"
LinkedIn = "https://linkedin.com/in/samir-baladi"
ORCID = "https://orcid.org/0009-0003-8903-0029"
ResearchGate = "https://researchgate.net/profile/Samir-Baladi"
Zenodo = "https://doi.org/10.5281/zenodo.18224754"

[project.scripts]
bioshield = "bioshield.cli:main"
bioshield-cli = "bioshield.cli:main"
bioshield-dashboard = "bioshield.dashboard:main"

[project.gui-scripts]
bioshield-gui = "bioshield.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["bioshield*"]
exclude = [
    "tests*",
    "docs*",
    "examples*",
    "benchmarks*",
    "*.tests",
    "*.tests.*"
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml", "*.md", "*.txt", "*.rst"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["bioshield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=bioshield",
    "--cov-report=term-missing",
    "--cov-report=html"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "unit: unit tests"
]

[tool.coverage.run]
source = ["bioshield"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
    "*/version.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]
per-file-ignores = {}
unfixable = ["F401"]

[tool.ruff.isort]
known-first-party = ["bioshield"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[metadata]
description-file = "README.md"
license-file = "LICENSE"
author = "Samir Baladi"
author-email = "emerladcompass@gmail.com"
maintainer = "Samir Baladi"
maintainer-email = "emerladcompass@gmail.com"
home-page = "https://github.com/emerladcompass/BioShield"
download-url = "https://github.com/emerladcompass/BioShield/releases"
platform = "any"
supported-platform = "any"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent"
]
